[package]
name = "passgen-console-linuxwin"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
ratatui = "*"
crossterm = "*"
arboard = "*"
unicode-width = "0.1.11"
rand = "0.9.0-alpha.0"

# Reduce the size of the executable  file:
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = 'abort'
strip = true

[build-dependencies]
windows_exe_info = "0.4"
