[package]
name = "passgen-console-linuxwin"
version = "1.2.1"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "A simple password generator."
readme = "README.md"
authors = ["Mamontov Konstantin <k@mamont.xyz>"]
build = "build.rs"
homepage = "https://github.com/mammothcoding/passgen-console-linuxwin"
repository = "https://github.com/mammothcoding/passgen-console-linuxwin"
keywords = ["password", "generator", "ratatui", "windows", "linux"]
categories = ["authentication", "command-line-utilities"]
exclude = [".*"]

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
arboard = "3.3.1"
unicode-width = "0.1.11"
rand = "0.9.0-alpha.0"

# Reduce the size of the executable  file:
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = 'abort'
strip = true

[build-dependencies]
windows_exe_info = "0.4"
